fix: heading-primary spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   font-family: "Lato", sans-serif;
   line-height: 1;
   font-weight: 400;
-  /* background-color: blue; */
 }
 
 .section-promo {
@@ -30,10 +29,12 @@ body {
 }
 
 .container-header {
+  height: 11rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 3rem 17.5rem;
+  padding: 0 17.5rem;
+  margin-bottom: 11rem;
   background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.4),
@@ -47,21 +48,21 @@ body {
 }
 
 .logo-text,
-.primary-heading {
+.primary-heading,
+.nav-link {
   font-family: Yeseva One, cursive;
   color: #fff;
 }
 
 .logo-text {
-  font-size: 3.6rem;
+  font-size: 3.8rem;
 }
 
 .nav-link:link,
 .nav-link:visited {
-  font-family: Yeseva One, cursive;
   font-size: 2rem;
   text-decoration: none;
-  padding: 3.4rem 2rem;
+  padding: 4rem 2rem;
   color: #fff;
 }
 
